--- a/.env
+++ b/.env
@@ -1,3 +1,2 @@
-MNEMONIC="six never proof among they fork melody flower toward deer weapon defy mixture insect come setup bottom alarm evil skill damage admit gain absent"
-MNEMONIC2="erase dust eyebrow cargo pupil addict coach unknown grit someone find jump side month sentence fall regret input luxury fox income husband spider uphold"
-MAIN_CONTRACT_ADDRESS="kQDI6jAUWXRnBCQ4TXe5TlZo_DXczryVnFNzjzdPFEVh5520"
+MNEMONIC="come easy coyote source useless sauce miss talent phrase visa drink pear tell toilet faculty bright nest remove pudding object welcome print become describe"
+MAIN_CONTRACT_ADDRESS="EQDWS_4lWUrOgX6pqTWOhHoKQVyN_zakx7Vy4OjOk7Ra_Hu1"
